# m1-projet-signal

./: CMakeLists.txt  Instrument.cpp  Signal.cpp  Signal.h  Tone.cpp  Tone.h  Track.h  Wave.h  main.cpp  utils.cpp  utils.h
src/: Effects.cpp  Effects.h  Effects.hpp  Instrument.cpp  Instrument.h  Instrument.hpp  Signal.cpp  Signal.h  Signal.hpp  Tone.cpp  Tone.h  Tone.hpp  Track.cpp  Track.hpp
src/utils/: Wave.cpp  Wave.hpp  utils.cpp  utils.hpp
